# prysm

.github/workflows/: go.yml
beacon-chain/blockchain/: BUILD.bazel  execution_engine.go  options.go  process_block.go  receive_attestation.go  service.go
beacon-chain/builder/: BUILD.bazel  options.go  service.go
beacon-chain/core/blocks/: header.go
beacon-chain/core/transition/: transition.go
beacon-chain/execution/: BUILD.bazel  engine_client.go  metrics.go
beacon-chain/execution/testing/: BUILD.bazel  mock_engine_client.go
beacon-chain/node/: BUILD.bazel  config.go  node.go  options.go
beacon-chain/powchain/: options.go  rpc_connection.go  service.go  service_test.go
beacon-chain/rpc/: service.go
beacon-chain/rpc/apimiddleware/: endpoint_factory.go  structs.go
beacon-chain/sync/: pending_attestations_queue.go  pending_blocks_queue.go  service.go  validate_beacon_blocks.go
cmd/beacon-chain/: BUILD.bazel  main.go  usage.go
cmd/beacon-chain/builder/: BUILD.bazel  options.go
cmd/beacon-chain/flags/: base.go
cmd/beacon-chain/powchain/: options.go
config/params/: config.go
consensus-types/blocks/: proto.go
encoding/ssz/: htrutils_test.go
proto/builder/: BUILD.bazel  builder.pb.go  builder.proto  generated.ssz.go  json_marshal_unmarshal.go  json_marshal_unmarshal_test.go
proto/engine/v1/: execution_engine.pb.go  execution_engine.proto  generated.ssz.go  json_marshal_unmarshal.go
proto/eth/service/: beacon_chain_service.pb.go  beacon_chain_service.pb.gw.go  (+3 more)
validator/client/: propose.go  runner.go  validator.go
(+19 files in other folders)
