load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["options.go"],
    importpath = "github.com/prysmaticlabs/prysm/cmd/beacon-chain/builder",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//cmd:__subpackages__",
    ],
    deps = [
        "//beacon-chain/powchain:go_default_library",
        "//beacon-chain/builder:go_default_library",
        "//cmd/beacon-chain/flags:go_default_library",
        "//io/file:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
